fixed links spacing

--- a/styles/main.module.css
+++ b/styles/main.module.css
@@ -51,6 +51,12 @@
 }
 
 .description {
+  padding: 1rem 0;
+  line-height: 1.5;
+  font-size: 1.5rem;
+}
+
+.links {
   margin: 4rem 0;
   line-height: 1.5;
   font-size: 1.5rem;
